# Physical-World-Scarcity-Terminal

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SPEC_ARCHITECT.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml
scripts/: init_db.sql  start.sh
src/: __init__.py  scheduler.py
src/analysis/: __init__.py  anomaly.py  market_correlation.py  risk_engine.py
src/api/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  connection.py  models.py
src/ingestion/: __init__.py  base.py  eia.py  finance.py  grid_caiso.py  macro_data.py  news.py  port.py  usgs.py  weather.py
src/ui/: __init__.py  app.py
