[project]
name = "pwst"
version = "0.1.0"
description = "Physical World Scarcity Terminal - A command-driven intelligence system for physical-world signals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PWST Contributors"}
]
keywords = ["terminal", "geospatial", "scarcity", "energy", "water", "infrastructure"]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "geoalchemy2>=0.14.0",
    
    # API & Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    
    # Task Scheduling
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    
    # Analysis
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    
    # Financial Data
    "yfinance>=0.2.36",
    
    # UI
    "streamlit>=1.30.0",
    "pydeck>=0.8.0",
    "altair>=5.2.0",
    "plotly>=5.18.0",
    
    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
pwst = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
